<resources>
    <string name="app_name">Lab 3 (a)</string>
    <string name="header">Lab 3 (a)</string>
    <string name="output_area">Output Area</string>
    <!-- Edit Text Hint  -->
    <string name="string_value">String Value</string>
    <string name="integer_value">Integer Value</string>
    <!-- Database (DB) -->
    <string name="button_1">DB using SQLite API</string>
    <string name="button_2">DB using Room Framework</string>
    <!-- Background Tasks (BGT) -->
    <string name="button_3">BGT using Threads Pool</string>
    <string name="button_4">BGT using Work Manager</string>
</resources>